--- a/html/index.html
+++ b/html/index.html
@@ -45,24 +45,309 @@
             </div>
         </section>
 
-        <!-- простой блок курсов (оставлен для примера) -->
-        <section id="courses" class="courses-section container">
-            <h2 class="section-title">Available Courses</h2>
-            <div class="course-list">
-                <article class="course-card">
-                    <h3 class="course-title">Python</h3>
-                    <p class="course-desc">For beginners — short lessons and projects.</p>
-                </article>
-                <article class="course-card">
-                    <h3 class="course-title">JavaScript</h3>
-                    <p class="course-desc">Web development — interactive browser editor.</p>
-                </article>
-                <article class="course-card">
-                    <h3 class="course-title">HTML / CSS</h3>
-                    <p class="course-desc">Web basics — build real UI components.</p>
-                </article>
-            </div>
+          <!-- STATS SECTION: streak, xp, level (converted from React/Tailwind) -->
+        <section class="stats-section container" aria-label="Quick user stats">
+          <div class="stats-grid">
+            <!-- Streak -->
+            <article class="stat-card" aria-labelledby="streak-title">
+              <div class="stat-icon-wrap">
+                <div class="stat-icon-circle">
+                  <!-- flame svg -->
+                  <svg class="stat-icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path d="M12 2s1.5 2 1.5 4.5S12 9 12 11" stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                    <path d="M7 13.5C7 9 11 7 12 5c1-2 2-3 4-3 0 4.5 3 6 3 9 0 5-7 7-10 4-2-2.5-1-4.5-2-6z" fill="white"/>
+                  </svg>
+                  <span class="icon-ring" aria-hidden="true"></span>
+                </div>
+              </div>
+
+              <h3 id="streak-title" class="stat-title">7 days</h3>
+              <p class="stat-subtitle">Streak 🔥</p>
+            </article>
+
+            <!-- XP Points -->
+            <article class="stat-card" aria-labelledby="xp-title">
+              <div class="stat-icon-wrap">
+                <div class="stat-icon-circle alt">
+                  <!-- zap svg -->
+                  <svg class="stat-icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" fill="white"/>
+                  </svg>
+                </div>
+              </div>
+
+              <h3 id="xp-title" class="stat-title">1,240 XP</h3>
+              <p class="stat-subtitle">Experience Points</p>
+
+              <div class="progress-wrap" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="65" aria-label="Progress to next level">
+                <div class="progress-fill" style="width:65%"></div>
+              </div>
+              <p class="progress-note">To next level: 260 XP</p>
+            </article>
+
+            <!-- Level -->
+            <article class="stat-card" aria-labelledby="level-title">
+              <div class="stat-icon-wrap">
+                <div class="stat-icon-circle alt2">
+                  <!-- trophy svg -->
+                  <svg class="stat-icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path d="M7 3v2a5 5 0 005 5 5 5 0 005-5V3H7z" fill="white"/>
+                    <path d="M4 7v2a6 6 0 006 6v2H8v2h8v-2h-2v-2a6 6 0 006-6V7h-2" stroke="white" stroke-width="0.6" fill="none"/>
+                  </svg>
+                </div>
+              </div>
+
+              <div class="level-badge">Level 12</div>
+              <h3 id="level-title" class="stat-title small">Junior Coder</h3>
+            </article>
+          </div>
         </section>
+
+                <section class="languages-section container" aria-labelledby="languages-title">
+          <div class="languages-header text-center">
+            <h2 id="languages-title" class="languages-title">Choose your programming language</h2>
+            <p class="languages-subtitle">Start your coding journey</p>
+          </div>
+
+          <div class="languages-grid" role="list">
+            <!-- Python -->
+            <article class="language-card" role="listitem">
+              <div class="card-bg-overlay"></div>
+
+              <div class="language-icon bg-gradient-python" aria-hidden="true">
+                <!-- simple code SVG -->
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="icon-white">
+                  <path d="M8 9l-3 3 3 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M16 9l3 3-3 3" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+
+              <div class="card-body">
+                <h3 class="lang-name">Python</h3>
+                <p class="lang-desc">For beginners</p>
+
+                <div class="lesson-row">
+                  <span class="lesson-note">Lesson 5/30</span>
+                  <span class="lesson-percent">17%</span>
+                </div>
+
+                <div class="progress-track" aria-hidden="true">
+                  <div class="progress-fill" style="width:17%"></div>
+                </div>
+
+                <a class="btn btn-continue" href="#python">Continue</a>
+              </div>
+            </article>
+
+            <!-- JavaScript -->
+            <article class="language-card" role="listitem">
+              <div class="card-bg-overlay"></div>
+
+              <div class="language-icon bg-gradient-js" aria-hidden="true">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="icon-white">
+                  <rect x="4" y="4" width="16" height="16" rx="4" stroke="currentColor" stroke-width="1.2"/>
+                </svg>
+              </div>
+
+              <div class="card-body">
+                <h3 class="lang-name">JavaScript</h3>
+                <p class="lang-desc">Web development</p>
+
+                <div class="lesson-row">
+                  <span class="lesson-note">Lesson 12/30</span>
+                  <span class="lesson-percent">40%</span>
+                </div>
+
+                <div class="progress-track">
+                  <div class="progress-fill" style="width:40%"></div>
+                </div>
+
+                <a class="btn btn-continue" href="#javascript">Continue</a>
+              </div>
+            </article>
+
+            <!-- HTML / CSS -->
+            <article class="language-card" role="listitem">
+              <div class="card-bg-overlay"></div>
+
+              <div class="language-icon bg-gradient-html" aria-hidden="true">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="icon-white">
+                  <circle cx="12" cy="12" r="8" stroke="currentColor" stroke-width="1.4"/>
+                </svg>
+              </div>
+
+              <div class="card-body">
+                <h3 class="lang-name">HTML/CSS</h3>
+                <p class="lang-desc">Web basics</p>
+
+                <div class="lesson-row">
+                  <span class="lesson-note">Lesson 18/30</span>
+                  <span class="lesson-percent">60%</span>
+                </div>
+
+                <div class="progress-track">
+                  <div class="progress-fill" style="width:60%"></div>
+                </div>
+
+                <a class="btn btn-continue" href="#htmlcss">Continue</a>
+              </div>
+            </article>
+
+            <!-- Java -->
+            <article class="language-card" role="listitem">
+              <div class="card-bg-overlay"></div>
+
+              <div class="language-icon bg-gradient-java" aria-hidden="true">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="icon-white">
+                  <path d="M6 8s2 1 6 1 6-1 6-1" stroke="currentColor" stroke-width="1.4" stroke-linecap="round"/>
+                </svg>
+              </div>
+
+              <div class="card-body">
+                <h3 class="lang-name">Java</h3>
+                <p class="lang-desc">Enterprise development</p>
+
+                <div class="lesson-row">
+                  <span class="lesson-note">Lesson 3/30</span>
+                  <span class="lesson-percent">10%</span>
+                </div>
+
+                <div class="progress-track">
+                  <div class="progress-fill" style="width:10%"></div>
+                </div>
+
+                <a class="btn btn-continue" href="#java">Continue</a>
+              </div>
+            </article>
+          </div>
+        </section>
+
+                <section id="how" class="how-section container" aria-labelledby="how-title">
+          <div class="how-header">
+            <h2 id="how-title" class="how-title">How it works</h2>
+            <p class="how-sub">Three simple steps to success</p>
+          </div>
+
+          <div class="how-grid" role="list">
+            <!-- connection line (desktop only) -->
+            <span class="how-line" aria-hidden="true"></span>
+
+            <!-- step 1 -->
+            <article class="how-step" role="listitem" aria-labelledby="step1-title">
+              <span class="step-number" aria-hidden="true">1</span>
+              <div class="step-icon bg-gradient-book" aria-hidden="true">
+                <!-- book svg -->
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="icon-white" aria-hidden="true">
+                  <path d="M3 6.5A2.5 2.5 0 015.5 4H20" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M3 19.5A2.5 2.5 0 015.5 17H20" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+
+              <h3 id="step1-title" class="step-title">Short lessons</h3>
+              <p class="step-desc">5-10 minutes a day — learn theory in small portions</p>
+            </article>
+
+            <!-- step 2 -->
+            <article class="how-step" role="listitem" aria-labelledby="step2-title">
+              <span class="step-number" aria-hidden="true">2</span>
+              <div class="step-icon bg-gradient-code" aria-hidden="true">
+                <!-- code svg -->
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="icon-white" aria-hidden="true">
+                  <path d="M8.5 7.5L4 12l4.5 4.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M15.5 7.5L20 12l-4.5 4.5" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+
+              <h3 id="step2-title" class="step-title">Practice in browser</h3>
+              <p class="step-desc">Write code right here — no installation required</p>
+            </article>
+
+            <!-- step 3 -->
+            <article class="how-step" role="listitem" aria-labelledby="step3-title">
+              <span class="step-number" aria-hidden="true">3</span>
+              <div class="step-icon bg-gradient-rocket" aria-hidden="true">
+                <!-- rocket svg -->
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" class="icon-white" aria-hidden="true">
+                  <path d="M7 12c0-2 3-6 5-8s6-2 6-2-1.2 4-3 6-6 5-8 5z" fill="currentColor"/>
+                  <path d="M5 19s2-1 4-1 3 1 3 1-2 2-4 2-3-2-3-2z" fill="currentColor"/>
+                </svg>
+              </div>
+
+              <h3 id="step3-title" class="step-title">Real projects</h3>
+              <p class="step-desc">Build real applications and add them to your portfolio</p>
+            </article>
+          </div>
+        </section>
+
+          <footer class="site-footer" role="contentinfo">
+      <div class="container footer-inner">
+        <div class="footer-grid">
+          <div class="footer-brand">
+            <div class="brand-row">
+              <img src="../img/small_logo.png" alt="Codelingo" class="footer-logo"/>
+              <span class="footer-brand-title">Codelingo</span>
+            </div>
+            <p class="footer-desc">
+              Learn programming in a fun and effective way. Every day brings you closer to your dream of becoming a developer.
+            </p>
+          </div>
+
+          <div class="footer-col">
+            <h4 class="footer-col-title">Company</h4>
+            <ul class="footer-links" aria-label="Company links">
+              <li><a href="#" class="footer-link">About</a></li>
+              <li><a href="#" class="footer-link">Blog</a></li>
+              <li><a href="#" class="footer-link">Careers</a></li>
+              <li><a href="#" class="footer-link">Press</a></li>
+            </ul>
+          </div>
+
+          <div class="footer-col">
+            <h4 class="footer-col-title">Support</h4>
+            <ul class="footer-links" aria-label="Support links">
+              <li><a href="#" class="footer-link">Help</a></li>
+              <li><a href="#" class="footer-link">Contact</a></li>
+              <li><a href="#" class="footer-link">FAQ</a></li>
+              <li><a href="#" class="footer-link">Community</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer-bottom">
+          <p class="copyright">© 2025 Codelingo. All rights reserved.</p>
+
+          <div class="social-row" aria-label="Social links">
+            <a href="#" class="social-link" aria-label="Facebook">
+              <!-- Facebook icon -->
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" class="social-svg" aria-hidden="true">
+                <path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07C2 17.05 5.66 21.11 10.44 21.9v-6.36H7.9v-2.8h2.54V10.1c0-2.5 1.49-3.87 3.77-3.87 1.09 0 2.23.2 2.23.2v2.45h-1.25c-1.23 0-1.61.77-1.61 1.56v1.88h2.74l-.44 2.8h-2.3V21.9C18.34 21.11 22 17.05 22 12.07z" fill="currentColor"/>
+              </svg>
+            </a>
+
+            <a href="#" class="social-link" aria-label="Twitter">
+              <!-- Twitter icon -->
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" class="social-svg" aria-hidden="true">
+                <path d="M22 5.92c-.63.28-1.3.48-2 .57a3.48 3.48 0 001.53-1.92 6.95 6.95 0 01-2.2.84 3.48 3.48 0 00-5.93 3.17A9.87 9.87 0 013 4.86a3.48 3.48 0 001.08 4.65 3.44 3.44 0 01-1.58-.44v.04a3.48 3.48 0 002.79 3.41 3.5 3.5 0 01-1.57.06 3.48 3.48 0 003.25 2.41A6.99 6.99 0 012 19.54a9.84 9.84 0 005.33 1.56c6.4 0 9.9-5.3 9.9-9.9v-.45A7.1 7.1 0 0022 5.92z" fill="currentColor"/>
+              </svg>
+            </a>
+
+            <a href="#" class="social-link" aria-label="Instagram">
+              <!-- Instagram icon -->
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" class="social-svg" aria-hidden="true">
+                <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 6.2a4.8 4.8 0 100 9.6 4.8 4.8 0 000-9.6zM18.4 6.1a1.1 1.1 0 11-2.2 0 1.1 1.1 0 012.2 0z" fill="currentColor"/>
+              </svg>
+            </a>
+
+            <a href="#" class="social-link" aria-label="YouTube">
+              <!-- YouTube icon -->
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" class="social-svg" aria-hidden="true">
+                <path d="M21.6 7.2s-.2-1.6-.8-2.3c-.8-.9-1.7-.9-2.1-1-3-.2-7.5-.2-7.5-.2s-4.5 0-7.5.2c-.5.1-1.3.1-2.1 1-.6.7-.8 2.3-.8 2.3S2 9 2 10.8v2.4C2 16 2.4 17.7 2.4 17.7s.2 1.6.8 2.3c.8.9 1.9.9 2.4 1 1.7.1 7.3.2 7.3.2s4.5 0 7.5-.2c.5-.1 1.3-.1 2.1-1 .6-.7.8-2.3.8-2.3S22 16 22 14.4v-2.4c0-1.8-.4-3.6-.4-3.6zM10 15.3V8.7l5.5 3.3L10 15.3z" fill="currentColor"/>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
     </main>
 </body>
 </html>
