fix links and styles

--- a/html/LogIn.html
+++ b/html/LogIn.html
@@ -84,7 +84,7 @@
                             Don't have an account?
                             <a href="#" class="auth-link">Sign up</a>
                         </p>
-                        <a href="#" class="btn btn-ghost">Back to home</a>
+                        <a href="index.html" class="btn btn-ghost">Back to home</a>
                     </footer>
                 </form>
             </section>
