--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
             </nav>
 
             <div class="auth-controls">
-                <a class="auth-link" href="#login">Log In</a>
+                <a class="auth-link" href="LogIn.html">Log In</a>
                 <a class="btn btn-primary" href="#signup">Sign Up</a>
             </div>
         </div>
