--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
 
             <div class="auth-controls">
                 <a class="auth-link" href="LogIn.html">Log In</a>
-                <a class="btn btn-primary" href="#signup">Sign Up</a>
+                <a class="btn btn-primary" href="SignUp.html">Sign Up</a>
             </div>
         </div>
     </header>
